--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -22,4 +22,4 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Run unit tests in Docker container
-      run: docker run huabench/code-llm python -m unittest discover -v
+      run: docker run -v .:/src huabench/code-llm /bin/bash -c "conda run --no-capture-output -n py310 python -m unittest discover -v"
