--- a/config/llm_config.yaml
+++ b/config/llm_config.yaml
@@ -1,20 +1,12 @@
 "api_base": {
-  "GPT": "https://vip.DMXapi.com/v1",
-    "VLM": "https://vip.DMXapi.com/v1",
-#  "VLM": "https://xiaoai.plus/v1",
-
-  #      "GPT": "https://xiaoai.plus/v1",
-  "QWEN": "https://dashscope.aliyuncs.com/compatible-mode/v1",
+  "GPT": "https://xxx.com/v1",
 }
 "api_key": {
-  #      "GPT": "sk-5mU8poYeiI4bydH492B59125206344598312600438205f65",
-#    "GPT": "sk-tT8XYVZUo5PZZsg1ppMNHOcJt0hZL59HSxI8B79VQSw6Wh7t",
-  "GPT": "sk-r9qfdF2lYiKx46j9d0UCzhrsDchgOcmq885KKr71pppkcxdm",
+  "GPT": "xxx",
 
-    "VLM": "sk-r9qfdF2lYiKx46j9d0UCzhrsDchgOcmq885KKr71pppkcxdm",
-#  "VLM": "sk-5mU8poYeiI4bydH492B59125206344598312600438205f65",
+    "VLM": "xxx",
 
-  "QWEN": "sk-99f55920b8834f6f8c1e78f8d3691c26",
+  "QWEN": "xxx",
   "CLAUDE": "input your claude api here"
 }
 "model": {
